fix firefox overflow scroll

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -275,6 +275,7 @@ select {
   width: 100%;
   display: flex;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .graphContainer div {
